--- a/package.json
+++ b/package.json
@@ -6,27 +6,21 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "nodemon --watch \"./src/**\" --ext \"ts,js\" --ignore \"src/**/*.spec.ts,src/**/*.json\" --exec \"ts-node src/index.ts\"",
-    "pretest": "rm -rf ./dist",
-    "test": "jest --runInBand --verbose",
-    "pretest:fast": "rm -rf ./dist",
-    "test:fast": "jest --runInBand --verbose --bail",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/betrybe/sd-0x-project-trybers-and-dragons.git"
+    "url": "git+https://github.com/devgabrielav/rpg-simulator"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/betrybe/sd-0x-project-trybers-and-dragons/issues"
+    "url": "https://github.com/devgabrielav/rpg-simulator"
   },
-  "homepage": "https://github.com/betrybe/sd-0x-project-trybers-and-dragons#readme",
+  "homepage": "https://github.com/devgabrielav/rpg-simulator",
   "devDependencies": {
-    "@jest/test-sequencer": "27.4.6",
     "@types/express": "4.17.13",
-    "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
@@ -37,9 +31,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-mocha": "9.0.0",
     "eslint-plugin-sonarjs": "0.10.0",
-    "jest": "27.3.1",
     "nodemon": "2.0.14",
-    "ts-jest": "27.0.7",
     "ts-node-dev": "1.1.8",
     "typescript": "4.4.3"
   },
